# OpenAdventure

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  launch-web.bat  launch-web.command  pyproject.toml
.githooks/: pre-commit
src/openadventure/: __init__.py  character_import.py  config.py  util.py
src/openadventure/cli/: __init__.py  firstrun.py  main.py  media_host.py  progress.py  render.py  repl.py  term.py  wizard.py
src/openadventure/data/: __init__.py  assistant_system_prompt.md  gm_system_prompt.md  models.json
src/openadventure/engine/: __init__.py  agent.py  commands.py  compaction.py  context.py  events.py  kickoff.py  prep.py  prompts.py  recap.py  self_knowledge.py  session.py  timeline.py
src/openadventure/ingest/: __init__.py  embeddings.py  extract.py  extractors.py  indexer.py  (+7 more)
tests/: conftest.py  test_agent_loop.py  test_ambience.py  test_books_cli.py  test_borderless_tables.py  test_campaigns_cli.py  test_canon.py  test_checkpoints.py  test_clock_tools.py  test_clocks.py  test_commands.py  test_compaction.py  test_context.py  test_dice.py  test_dispatch_batch.py  test_elevenlabs.py  test_embeddings.py  test_encounter.py  test_encounter_tools.py  test_eventlog.py  test_gemini_provider.py  test_images.py  test_ingest.py  test_media_host.py  test_migrations.py  test_modules.py  test_music.py  test_openai_provider.py  test_prep.py  test_recap.py  test_reindex.py  test_render.py  test_repl.py  test_scene_tools.py  test_self_knowledge.py  test_settings.py  test_sheet_tools.py  test_sheets.py  test_source_types.py  test_sources_cli.py  (+10 more)
(+55 files in other folders)
